# Ab3P

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  identify_abbr-out  identify_abbr.C
NCBITextLib/: BUILD.bazel
NCBITextLib/applications/: run_BayeX.C
NCBITextLib/include/: Doc.h  XPost.h
NCBITextLib/lib/: FBase.C  Hash.C  Makefile  Vnab.C
WordData/: BUILD.bazel
lib/: Ab3P.C  Ab3P.h  AbbrStra.C  AbbrStra.h  AbbrvE.C  AbbrvE.h  MPtok.C  Makefile  main.C
