package(default_visibility = ['//visibility:public'])
exports_files(['path_Ab3P'])

cc_library(
    name = "ab3p",
    visibility = ['//visibility:public'],
    srcs = glob(['lib/*.C']),
    hdrs = glob(['lib/*.h']),
    deps = [
        '//NCBITextLib:ncbi_text_lib',
    ],
    copts = [
        '-Wno-missing-braces',
        '-Wno-deprecated-register',
        '-Ilib',
        '-Iexternal/ab3p/lib',
    ],
)

cc_binary(
    name = "lib.so",
    visibility = ['//visibility:public'],
    srcs = [],
    deps = [
        ":ab3p"
    ],
    copts = [
        '-Wno-missing-braces',
        '-Wno-deprecated-register',
        '-Ilib',
        '-Iexternal/ab3p/lib',
    ],
    linkshared = True,
)
